style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    font-family: "Roboto", Arial, Helvetica, sans-serif;
    --header-height: 100px;
    --standard-img-container-size: 35px;
    --project-img-container-size: 150px;
    --title-height: 65px;
    --label-width: 200px;
    --input-width: 200px;
    --small-input-width: 130px;
    --small-label-width: 130px;
    --small-header-height: calc(70px + var(--standard-img-container-size) + 0.1rem + 24px  );
    --small-project-img-conatainer-size: 100px;
    background: #1F2937;
    overflow-x: hidden;
}

.hidden {
    display: none !important;
    pointer-events: none;
    opacity: 0;
    z-index: 0;
}


img{
    object-fit: contain;
    height: 100%;
    width: auto;
}

.img-container{
    aspect-ratio: 1 /1;
    display: flex;
    align-items: center;
    justify-content: center;
}

#overlay{
    position: fixed;
    inset: 0;
    backdrop-filter: blur(8px);
    background: linear-gradient(
    135deg,
    rgba(52, 152, 219, 0.85),   
    rgba(44, 62, 80, 0.9)       
    );
    z-index: 0;
    pointer-events: none;
    opacity: 1;
    transition: opacity 0.3s ease;
}

#overlay.hidden {
    opacity: 0;
    backdrop-filter: none;
    pointer-events: none;
}

#login{
    padding: 10px;
    border: 3px solid;
    border-radius: 12px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 10px;

    aspect-ratio: 1 / 1;
    width: clamp(260px, 30svw, 400px);
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    background: linear-gradient(135deg, #3498db, #2c3e50);
}

#login form{
    display: flex;
    flex-direction: column;
    gap: 10px;
    align-items: center;
    justify-content: space-between;

    background-color: transparent;
    
}

#login h2 {
  font-size: 1.5rem;
  color: #2c3e50;
  margin-bottom: 0.5rem;
}

#login div{
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: nowrap;
    gap: 5px;
}

#password-div{
    position: relative;
}

#show-password-icon{
    position: absolute;
    right: 8px;
    top: 50%;
    transform: translateY(-50%);
    width: 20px;
    height: 20px;
    cursor: pointer;
    user-select: none;
}

#login form input{
    height: 1.5rem;
    padding: 5px;
    width: 100%;
    flex: 1;
    min-width: 0;
    border: 1px solid #ccc;
    border-radius: 8px;
    font-size: 1rem;
    transition: border-color 0.2s;

}

#password{
    padding-right: 2rem;
}

#login form input:focus {
  outline: none;
  border-color: #3498db;
  box-shadow: 0 0 0 3px rgba(52,152,219,0.2);
}

 #login #login-buttons{
    margin-top: auto;
    display: flex;
    align-items: center;
    justify-content: center;
}

#login-button{
    width: 80%;
    padding: 12px;
    background: #3498db;
    border: none;
    border-radius: 8px;
    color: white;
    font-size: 1rem;
    font-weight: 600;
    cursor: pointer;
    transition: background 0.2s, transform 0.1s;

}

#login button:hover {
  background: #2980b9;
}

#login button:active {
  transform: scale(0.97);
}

#user .img-container{
    max-width: var(--standard-img-container-size);
}

#odin-logo{
    max-width: 80px;
    flex-shrink: 0;
}

header{
    padding: 10px 2vw;
    height: var(--header-height);
    width: 100svw;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 24px;
    flex-wrap: wrap;

    position: fixed;
    top: 0;
    left: max(0.5svw, 5px);
    z-index: 10;

    background: #1F2937; 
    color:#FFFFFF;

    
}

header.hidden{
    display: none;
    pointer-events: none;
    z-index: 0;
    opacity: 0;
}

#header h1{
   flex: 1 1 0;
    text-align: center;
    font-size: 1.5rem;
    margin: 0 16px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    z-index: 2;
}

#header-right {
    display: flex;
    align-items: center;
    gap: 16px;
    flex-shrink: 0;
}

#user{
    display: flex;
    align-items: center;
    gap: 8px;
    color: #E5E7EB;
}

#logout {
    cursor: pointer;
    font-weight: 500;
    transition: color 0.3s ease, transform 0.2s ease;
}

#logout:hover{
    transform: translateX(5px); 
    color: #FFFFFF;
}


main {
    z-index: 1;
    position: relative;
    min-height: calc(100svh + var(--header-height));
    
    display: grid;
    grid-template-columns: 0.2fr 1fr 1fr;
    grid-template-rows: var(--header-height) repeat(3, 1fr) var(--header-height);
}



#sidebar{
    padding: 10px;
    grid-column: 1 / 2;
    grid-row: 2 / 5;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background: #111827;
    
}

.sidebar-item{
    display: flex;
    align-items: center;
    gap: 10px;
    cursor: pointer;
    color: #E5E7EB;
    transition: background-color 0.3s ease, transform 0.2s ease;
}

.sidebar-item:hover {
    background-color: #1F2937;
    transform: translateX(5px); 
    color: #FFFFFF;
}

.sidebar-item .img-container{
    max-width: var(--standard-img-container-size);
}

#content{
    grid-row: 2/ 5;
    grid-column: 2 / 4;
    display: flex;
    flex-direction: column;
    align-items: center;
    background: #F3F4F6;
}

#content-title{
    display: flex;
    align-items: center;
    justify-content: center;
    height: var(--title-height);

    font-size: 2rem;          
    font-weight: 700;         
    margin-top: 2rem;         
    margin-bottom: 1rem;      
    color: #1f2937;          
    text-align: left;   
}

#main-content{
    margin-top: 5%;
    min-height: calc(95% - var(--title-height));
    max-height: calc(95% - var(--title-height));
    min-width: 100%;
    max-width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#main-content.projects{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows:  repeat(auto-fit, 200px);
    gap: 10px;
    margin-left: auto;
    margin-left: auto;
}

.project-item{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 5px;
}

.project-item .img-container{
    max-width: var(--project-img-container-size);
}

#upload-form{
    min-height: 100%;
    min-width: 100%;
    max-width: 100%;
    max-height: 100%;
    padding: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;

    background: #f0f4f8;
    border-radius: 12px;
    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
}

.upload-form-item{
    display: flex;;
    align-items: center;
    justify-content: space-between;
    gap: 10px;
    width: calc(var(--input-width) + var(--label-width));

}

.upload-form-item label{
    width: var(--label-width);
    font-weight: 500;
    color: #2c3e50;
}

.upload-form-item input{
    width: var(--input-width);
    padding: 6px 8px;
    border: 1px solid #ccc;
    border-radius: 6px;
    background: #fff;
    transition: border 0.3s, box-shadow 0.3s;
}

.upload-form-item input:focus {
    border-color: #3b82f6;
    box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.2);
    outline: none;
}

#droparea{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 20px;
    width: calc(var(--input-width) + var(--label-width));

    padding: 20px;
    border: 2px dashed #3b82f6;
    border-radius: 12px;
    background: linear-gradient(135deg, #e0f2ff, #ffffff);
    transition: border-color 0.3s, background 0.3s;
}

#droparea:hover {
    border-color: #2563eb;
    background: linear-gradient(135deg, #dbeafe, #f0f9ff);
}

#droparea .img-container{
    max-height: 100px;
}

#droparea p {
    font-size: 0.95rem;
    color: #1f2937;
    text-align: center;
}

#upload-form .upload-form-item #file::file-selector-button{
    visibility: hidden;
}

#upload-form .upload-form-item #file{
     width: var(--input-width);
     color: transparent;
    vertical-align: middle;
    display: none;
}

#file-name-span {
    font-size: 0.9rem;
    color: #374151;
}

#upload-btn{
    width: calc(var(--input-width) + var(--label-width));
    padding: 10px 10px;
    border: none;
    border-radius: 8px;
    background: #3b82f6;
    color: white;
    font-weight: 600;
    cursor: pointer;
    transition: background 0.3s, transform 0.2s, box-shadow 0.2s;
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
}

#upload-btn:hover {
    background: #2563eb;
    transform: translateY(-1px);
    box-shadow: 0 6px 12px rgba(0,0,0,0.15);
}

.info{
    display: flex;
    align-items: center;
    justify-content: center;
}

#info-wrapper{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}
footer{
    grid-row: 5 / 6;
    grid-column: 1 / 4;

    display: flex;
    justify-content: center;
    align-items: center;

    background: #1F2937;
    color: white;
}

@media (max-width: 950px){
    header{
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        height: fit-content;
        display: flex;
        align-items: center;
        justify-content: space-between;
        padding: 0 1rem;
        z-index: 1000;

    }

    #odin-logo{
        flex-shrink: 1;
        max-width: 70px;
        margin-left: 8px;
    }

    #header-right{
        width: 100%;
        justify-content: space-evenly;
        font-size: 0.75rem;
    }

    header h1{
       font-size: 0.95rem;
    }

    .sidebar {
        position: fixed;
        bottom: 0;
        left: 0;
        width: 100%;
        height: 60px;
        display: flex;
        justify-content: space-around;
        align-items: center;
        background: var(--sidebar-color, #2d2d2d);
        z-index: 1000;
    }

   .sidebar-item {
        flex-direction: column;
        font-size: 0.75rem;
    }

    .content { 
        margin-bottom: 70px; 
        padding: 1rem;
    }

    .content-title {
         font-size: 1.6rem;
        text-align: center;
        margin-bottom: 1.5rem;
    }

    main{
        margin-top: var(--small-header-height);
        min-height: calc(100svh + var(--small-header-height));
        padding-top: 25px;

    }

    .upload-form-item{
         width: calc(var(--small-input-width) + var(--small-label-width));
    }

    .upload-form-item label{
        width: var(--small-label-width);
    }

    .upload-form-item input{
        width: var(--small-input-width);
    }

    #droparea{
        width: clac(var(--small-input-width) + var(--small-label-width));
    }

    #upload-btn{
       width: clac(var(--small-input-width) + var(--small-label-width)); 
    }

    #main-content.projects{
        display: flex;
        flex-direction: column;
        gap: 20px;
    }

    .project-item .img-container{
        max-width: var(--small-project-img-conatainer-size);
    }
}

